# stock

./: .gitignore  CMakeLists.txt
bin_readin/: CMakeLists.txt  main.cxx  reader_base.cc  reader_base.hh  readin_doubles.cc  readin_time.cc
cmake/: FindROOT.cmake
data/: download_stock_data.ps1  stockNames.data
